Turned into a resume for MSJC

--- a/src/application.tex
+++ b/src/application.tex
@@ -29,15 +29,15 @@
 
 % personal data
 \name{Rodrigo}{Navarro Pérez}
-\title{Curriculum vit\ae}
+\title{Resume}
 \address{Department of Physics}%
         {San Diego State University University}%
         {550 Campanile Drive. San Diego, CA-92182<| EEUU>}
 \phone[mobile]{+1~(515)~441~9222}
-\phone[fixed]{+1~(619)~594~6153}
-\email{rnavarroperez@sdsu.edu}
+% \phone[fixed]{+1~(619)~594~6153}
+\email{r0dr160@gmail.com}
 \homepage{rnavarroperez.sdsu.edu}
-\social[github]{rnavarroperez}
+% \social[github]{rnavarroperez}
 %\quote{Some quote}
 
 \addbibresource{rodrigo.bib}
@@ -62,7 +62,7 @@
 %----- list of publications -------------------------------------------------------
 %% \clearpage
 %% \makeheading
-\input{publications.tex}
+% \input{publications.tex}
 
 %----- research statement  -------------------------------------------------------
 % \clearpage
