--- a/src/cv.tex
+++ b/src/cv.tex
@@ -2,9 +2,9 @@
 
 \makecvtitle
 
-\section{<Research expertise|Intereses de investigación>}
+% \section{<Research expertise|Intereses de investigación>}
 
-\cvitem{}{< Nuclear density functional theory, density matrix expansion, heavy nuclei. Effective interactions, Gogny force. Nucleon-Nucleon interaction, chiral potentials. Nuclear structure calculations, few body problems. Uncertainty quantification, error propagation. High performance computing. | Teoría del funcional de densidad nuclear, nucleos pesados. Interacciones effectivas, fuerza de Gogny. Interacción Nucleón-Nucleón, potenciales quirales. Cálculos de estructura nuclear, problemas de pocos cuerpos. Cuantificación de incertidumbres, propagación de errores. Computación de alto rendimineto>}
+% \cvitem{}{< Nuclear density functional theory, density matrix expansion, heavy nuclei. Effective interactions, Gogny force. Nucleon-Nucleon interaction, chiral potentials. Nuclear structure calculations, few body problems. Uncertainty quantification, error propagation. High performance computing. | Teoría del funcional de densidad nuclear, nucleos pesados. Interacciones effectivas, fuerza de Gogny. Interacción Nucleón-Nucleón, potenciales quirales. Cálculos de estructura nuclear, problemas de pocos cuerpos. Cuantificación de incertidumbres, propagación de errores. Computación de alto rendimineto>}
 
 \section{<Professional experience|Experiencia profesional>}
 
@@ -33,7 +33,7 @@
  title = {Postdoc},
  institution = {Ohio University},
  address = {<USA|EEUU>},
- description = {\f{Supervisors} Charlotte Elster <and|y> Daniel Phillips},
+ % description = {\f{Supervisors} Charlotte Elster <and|y> Daniel Phillips},
 }
 
 \entry{
@@ -41,10 +41,10 @@
  title = {Postdoc},
  institution = {Lawrence Livermore National Laboratory},
  address = {<USA|EEUU>},
- description = {\f{Supervisor} Nicolas Schunck},
+ % description = {\f{Supervisor} Nicolas Schunck},
 }
 
-\section{<Teaching experience|Experiencia docente>}
+\section{<Teaching experience (including course redesign)|Experiencia docente>}
 
 \entry{
  date = {<since|desde> 2019},
@@ -93,10 +93,10 @@
   title = {<PhD in Physics and Mathematics|Doctorado en Física y Matemáticas>},
   institution = {Universidad de Granada},
   address = {<Spain|España>},
-  description = {
-    \f{<Thesis|Tesis>} ``Statistical error analysis of the Nuclear Force'' <|\newline(Análisis de los errores estadísticos de la Fuerza nuclear)> \par
-    \f{<Supervisors|Supervisores>} Enrique Ruiz Arriola <and|y> José Enrique Amario Soriano
-  },
+  % description = {
+  %   \f{<Thesis|Tesis>} ``Statistical error analysis of the Nuclear Force'' <|\newline(Análisis de los errores estadísticos de la Fuerza nuclear)> \par
+  %   \f{<Supervisors|Supervisores>} Enrique Ruiz Arriola <and|y> José Enrique Amario Soriano
+  % },
 }
 
 \entry{
@@ -104,10 +104,10 @@
   title = {<Master in Physics and Mathematics|Máster en Física y Matemáticas>},
   institution = {Universidad de Granada},
   address = {<Spain|España>},
-  description = {
-    \f{<Thesis|Tesis>} ``Solución al Problema de Campos Hipercríticos mediante Condiciones de Frontera'' <\newline(Boundary conditions to solve the hypercritical field problem)|> \par
-    \f{Supervisor} Enrique Ruiz Arriola
-  },
+  % description = {
+  %   \f{<Thesis|Tesis>} ``Solución al Problema de Campos Hipercríticos mediante Condiciones de Frontera'' <\newline(Boundary conditions to solve the hypercritical field problem)|> \par
+  %   \f{Supervisor} Enrique Ruiz Arriola
+  % },
 }
 
 \entry{
@@ -115,10 +115,10 @@
   title = {<BSc in Physics|Licenciatura en Física>},
   institution = {Universidad de las Américas Puebla},
   address = {<Mexico|México>},
-  description = {
-    \f{<Thesis|Tesis>} ``Obtención del Estado base para la Cuerda de un Gravitón'' <\newline(Ground state of a graviton string)|> \par
-    \f{Supervisor} Roberto Cartas Fuentevilla
-  },
+  % description = {
+  %   \f{<Thesis|Tesis>} ``Obtención del Estado base para la Cuerda de un Gravitón'' <\newline(Ground state of a graviton string)|> \par
+  %   \f{Supervisor} Roberto Cartas Fuentevilla
+  % },
 }
 
 %\entry{
@@ -136,6 +136,34 @@
 %  \section{<Selected publications|Publicaciones destacadas>}
 %  \biblist{aplas13,pldi11,cav09}
 %}{}
+%
+
+\section{<Teaching training|Capacitación docente>}
+
+\entry{
+  date = {2021},
+  title = {The Motivating Learners Course},
+  institution = {Motivate Lab},
+  description = {Emphasizing growth mindset, purpose, and sense of belonging in students}
+}
+
+\entry{
+  date = {2019},
+  title = {Supporting Undocumented and Mixed-Immigration Status Students},
+  institution = {Center for Teaching and Learning},
+}
+
+\entry{
+  date = {2019},
+  title = {Supporting Students Facing Economic Challenges},
+  institution = {Center for Teaching and Learning},
+}
+
+\entry{
+  date = {2018},
+  title = {Designing Lectures for Increased Student Engagement},
+  institution = {Center for Teaching and Learning},
+}
 
 \section{<Externally funded projects|Proyectos con financiaión externa>}
 
@@ -166,12 +194,12 @@
   address = {<USA|EEUU>},
 }
 
-\award{
-  date = {2016},
-  title = {<Finalist|Finalista>: Research Slam},
-  institution = {Lawrence Livermore National Laboratory},
-  address = {<USA|EEUU>},
-}
+% \award{
+%   date = {2016},
+%   title = {<Finalist|Finalista>: Research Slam},
+%   institution = {Lawrence Livermore National Laboratory},
+%   address = {<USA|EEUU>},
+% }
 
 \award{
   date = {2015},
@@ -180,49 +208,49 @@
   address = {<Spain|España>},
 }
 
-\award{
-      date = {Sep -- Nov 2014},
-      title = {<PhD. abroad program scholarship|Beca de movilidad para doctorado>},
-      institution = {Universidad de Granada},
-      address = {<Spain|España>}
-}
+% \award{
+%       date = {Sep -- Nov 2014},
+%       title = {<PhD. abroad program scholarship|Beca de movilidad para doctorado>},
+%       institution = {Universidad de Granada},
+%       address = {<Spain|España>}
+% }
 
 
-\award{
-  date = {2010--2014},
-  title = {<PhD Scholarship|Beca para doctorado>},
-  institution = {<National Council on Science and Technology|Consejo Nacional de Ciencia y Tecnología> (CONACyT)},
-  address = {<Mexico|México>},
-}
+% \award{
+%   date = {2010--2014},
+%   title = {<PhD Scholarship|Beca para doctorado>},
+%   institution = {<National Council on Science and Technology|Consejo Nacional de Ciencia y Tecnología> (CONACyT)},
+%   address = {<Mexico|México>},
+% }
 
-\award{
-  date = {2009--2010},
-  title = {<MSc Scholarship|Beca para máster>},
-  institution = {<Carolina Foundation|Fundación Carolina>},
-  address = {<Spain|España>},
-}
+% \award{
+%   date = {2009--2010},
+%   title = {<MSc Scholarship|Beca para máster>},
+%   institution = {<Carolina Foundation|Fundación Carolina>},
+%   address = {<Spain|España>},
+% }
 
-\award{
-  date = {2009},
-  title = {Magna Cum Laude (<BSc|Licenciatura>)},
-  institution = {Universidad de las Américas, Puebla},
-  address = {<Mexico|México>},
-}
+% \award{
+%   date = {2009},
+%   title = {Magna Cum Laude (<BSc|Licenciatura>)},
+%   institution = {Universidad de las Américas, Puebla},
+%   address = {<Mexico|México>},
+% }
 
-\award{
-  date = {2009},
-  title = {<Highest GPA (School of Science)|Promedio más alto (Escuela de Ciencias)>},
-  institution = {Universidad de las Américas, Puebla},
-  address ={<Mexico|México>},
-}
+% \award{
+%   date = {2009},
+%   title = {<Highest GPA (School of Science)|Promedio más alto (Escuela de Ciencias)>},
+%   institution = {Universidad de las Américas, Puebla},
+%   address ={<Mexico|México>},
+% }
 
 
-\award{
-  date = {2006--2007},
-  title = {<Member of the Dean's List (School of Science)|Miembro de la Lista del Decano (Escuela de Ciencias)>},
-  institution = {Universidad de las Américas, Puebla},
-  address ={<Mexico|México>},
-}
+% \award{
+%   date = {2006--2007},
+%   title = {<Member of the Dean's List (School of Science)|Miembro de la Lista del Decano (Escuela de Ciencias)>},
+%   institution = {Universidad de las Américas, Puebla},
+%   address ={<Mexico|México>},
+% }
 
 
 
@@ -255,246 +283,246 @@
 %  institution = {QMUL},
 %}
 
-\section{<Academic advising|Asesoría académica>}
+% \section{<Academic advising|Asesoría académica>}
 
-\subsection{<Thesis supervising|Supervisión de tesis>}
+% \subsection{<Thesis supervising|Supervisión de tesis>}
 
-\thesis{
- date = {2019},
- title = {Improving Nuclear Mass Predictions Using Machine Learning Algorithms},
- author = {Garret Gallear},
- degree = {<M.S. in Physics|Máster en Física>},
- institution = {San Diego State University},
- address = {<USA|EEUU>},
-}
+% \thesis{
+%  date = {2019},
+%  title = {Improving Nuclear Mass Predictions Using Machine Learning Algorithms},
+%  author = {Garret Gallear},
+%  degree = {<M.S. in Physics|Máster en Física>},
+%  institution = {San Diego State University},
+%  address = {<USA|EEUU>},
+% }
 
-\subsection{<Undergraduate research supervision|Supervisión de investigación estudiantil a nivel licenciatura>}
+% \subsection{<Undergraduate research supervision|Supervisión de investigación estudiantil a nivel licenciatura>}
 
-\student{
- date = {since 2021},
- name = {Ky Putnam},
- project = {Uncertaintiy Quantification in local Chiral interactions},
- host = {San Diego State University}
-}
+% \student{
+%  date = {since 2021},
+%  name = {Ky Putnam},
+%  project = {Uncertaintiy Quantification in local Chiral interactions},
+%  host = {San Diego State University}
+% }
 
-\student{
- date = {since 2021},
- name = {Nathaniel Saavedra},
- project = {Statistical Analysis of Stable Nuclei Collision},
- host = {San Diego State University}
-}
+% \student{
+%  date = {since 2021},
+%  name = {Nathaniel Saavedra},
+%  project = {Statistical Analysis of Stable Nuclei Collision},
+%  host = {San Diego State University}
+% }
 
-\student{
- date = {2021},
- name = {Marielle Duran},
- project = {Monte Carlo Sampling of phenomenological nuclear interactions},
- host = {San Diego State University}
-}
+% \student{
+%  date = {2021},
+%  name = {Marielle Duran},
+%  project = {Monte Carlo Sampling of phenomenological nuclear interactions},
+%  host = {San Diego State University}
+% }
 
-\student{
- date = {2020--2021},
- name = {Juan Ortiz},
- project = {Gaussian Process emulation of experimental Nucleon-Nucleon scattering data},
- host = {San Diego State University}
-}
+% \student{
+%  date = {2020--2021},
+%  name = {Juan Ortiz},
+%  project = {Gaussian Process emulation of experimental Nucleon-Nucleon scattering data},
+%  host = {San Diego State University}
+% }
 
-\student{
- date = {2020},
- name = {Raul Bernal-Gonzales},
- project = {Re-implementation of the AV18 potential with updated scattering data and uncertainties},
- host = {San Diego State University}
-}
+% \student{
+%  date = {2020},
+%  name = {Raul Bernal-Gonzales},
+%  project = {Re-implementation of the AV18 potential with updated scattering data and uncertainties},
+%  host = {San Diego State University}
+% }
 
-\student{
- date = {Since 2019},
- name = {Matthew Crowley},
- project = {Quantification of systematic uncertainty in Nuclear DFT predictions with Random Forests},
- host = {San Diego State University}
-}
+% \student{
+%  date = {Since 2019},
+%  name = {Matthew Crowley},
+%  project = {Quantification of systematic uncertainty in Nuclear DFT predictions with Random Forests},
+%  host = {San Diego State University}
+% }
 
-\student{
- date = {2019--2020},
- name = {Steven Bradley},
- project = {Model independent Nucleon-Nucleon scattering amplitudes using Random Forests},
- host = {San Diego State University}
-}
+% \student{
+%  date = {2019--2020},
+%  name = {Steven Bradley},
+%  project = {Model independent Nucleon-Nucleon scattering amplitudes using Random Forests},
+%  host = {San Diego State University}
+% }
 
-\student{
- date = {2018--2019},
- name = {Diego Fernández del Val},
- project = {Optical Potential model for analyzing elastic scattering data of tightly bound nuclei},
- host = {San Diego State University}
-}
-
-
-\subsection{<Thesis reviewing|Evaluación de tesis>}
-
-\thesis{
- date = {2021},
- title = {Time-series and phasecurve photometry of episodically-active asteroid (6479) Gault in a quiescent state},
- author = {Josiah Nicholas Purdum},
- degree = {<Master of Science in Astronomy|Máster en Ciencias en Astronomía>},
- institution = {San Diego State University},
- address = {<USA|EEUU>},
-}
-
-\subsection{<PhD qualifying exam committee|Miembro del comité de examen de candidatura>}
-
-\student{
- date = {<May|Mayo> 2021},
- name = {Stephanie Lauber},
- project = {Benchmarking projected Hartree-Fock as an approximation},
- host = {San Diego State University}
-}
-
-\student{
- date = {<March|Marzo> 2021},
- name = {Oliver Gorton},
- project = {Advanced nuclear shell-model calculations for basic and applied science},
- host = {San Diego State University}
-}
+% \student{
+%  date = {2018--2019},
+%  name = {Diego Fernández del Val},
+%  project = {Optical Potential model for analyzing elastic scattering data of tightly bound nuclei},
+%  host = {San Diego State University}
+% }
 
 
-\student{
- date = {<May|Mayo> 2020},
- name = {Jordan Fox},
- project = {Uncertainty quantification of an empirical shell-model interaction using principal component analysis},
- host = {San Diego State University}
-}
+% \subsection{<Thesis reviewing|Evaluación de tesis>}
+
+% \thesis{
+%  date = {2021},
+%  title = {Time-series and phasecurve photometry of episodically-active asteroid (6479) Gault in a quiescent state},
+%  author = {Josiah Nicholas Purdum},
+%  degree = {<Master of Science in Astronomy|Máster en Ciencias en Astronomía>},
+%  institution = {San Diego State University},
+%  address = {<USA|EEUU>},
+% }
+
+% \subsection{<PhD qualifying exam committee|Miembro del comité de examen de candidatura>}
+
+% \student{
+%  date = {<May|Mayo> 2021},
+%  name = {Stephanie Lauber},
+%  project = {Benchmarking projected Hartree-Fock as an approximation},
+%  host = {San Diego State University}
+% }
+
+% \student{
+%  date = {<March|Marzo> 2021},
+%  name = {Oliver Gorton},
+%  project = {Advanced nuclear shell-model calculations for basic and applied science},
+%  host = {San Diego State University}
+% }
 
 
-%\thesis{
-%  date = {2009},
-%  title = {Sobre Algunas Clases Polinomiales de Satisfacibilidad Proposicional},
-%  author = {José Inácio de Jesus Rodrigues},
-%  degree = {<Doctor in Mathematics|Doctor en Matemáticas>},
-%  institution = {Universidad de Sevilla},
-%  address = {<Spain|España>},
-%}
-
-\section{<Invited talks|Conferencias invitadas>}
-
-\entry{
-  date = {<Sept|Septiembre> 2019},
-  title = {Human Side of Science Distinguished Speaker Series at University of San Diego},
-  address = {San Diego, CA <USA|EEUU>},
-  description = {
-    \f{<Title|Título>} ``Uncertainty Quantification in the supercomputing era'' }
-}
+% \student{
+%  date = {<May|Mayo> 2020},
+%  name = {Jordan Fox},
+%  project = {Uncertainty quantification of an empirical shell-model interaction using principal component analysis},
+%  host = {San Diego State University}
+% }
 
 
-\entry{
-  date = {<Nov|Noviembre> 2019},
-  title = {Gogny 2019: Microscopic Approaches to Nuclear Structure and Reactions},
-  address = {Livermore, CA <USA|EEUU>},
-  description = {
-    \f{<Title|Título>} ``Recent developments in Microscopically Constrained EDFs'' }
-}
+% %\thesis{
+% %  date = {2009},
+% %  title = {Sobre Algunas Clases Polinomiales de Satisfacibilidad Proposicional},
+% %  author = {José Inácio de Jesus Rodrigues},
+% %  degree = {<Doctor in Mathematics|Doctor en Matemáticas>},
+% %  institution = {Universidad de Sevilla},
+% %  address = {<Spain|España>},
+% %}
 
-\entry{
-  date = {<Jan|Enero> 2019},
-  title = {42nd Symposium on Nuclear Physics},
-  address = {Cocoyoc, Mexico},
-  description = {
-    \f{<Title|Título>} ``Microscopically based energy density functionals for nuclei using the density matrix expansion'' }
-}
+% \section{<Invited talks|Conferencias invitadas>}
 
-\entry{
-  date = {<Oct|Octubre> 2018},
-  title = {Joint Meeting of the APS Division of Nuclear Physics and the Physical Society of Japan},
-  address = {Waikoloa, HI <USA|EEUU>},
-  description = {
-    \f{<Title|Título>} ``HPC implementation of microscopically constrained energy density functionals'' }
-}
+% \entry{
+%   date = {<Sept|Septiembre> 2019},
+%   title = {Human Side of Science Distinguished Speaker Series at University of San Diego},
+%   address = {San Diego, CA <USA|EEUU>},
+%   description = {
+%     \f{<Title|Título>} ``Uncertainty Quantification in the supercomputing era'' }
+% }
 
-\entry{
-  date = {<Mar|Marzo> 2018},
-  title = {San Diego State University Colloquium},
-  address = {San Diego, CA <USA|EEUU>},
-  description = {
-    \f{<Title|Título>} ``Precision nuclear physics: Uncertainty Quantification in the supercomputing era'' }
-}
 
-\entry{
-  date = {<Jan|Enero> 2017},
-  title = {Workshop on The tower of effective (field) theories and the emergence of nuclear phenomena},
-  address = {Saclay <France|Francia>},
-  description = {
-    \f{<Title|Título>} ``Error quantification and falsification of chiral-EFT interactions'' }
-}
+% \entry{
+%   date = {<Nov|Noviembre> 2019},
+%   title = {Gogny 2019: Microscopic Approaches to Nuclear Structure and Reactions},
+%   address = {Livermore, CA <USA|EEUU>},
+%   description = {
+%     \f{<Title|Título>} ``Recent developments in Microscopically Constrained EDFs'' }
+% }
 
-\entry{
-  date = {<Jan|Enero> 2017},
-  title = {American Physical Society April Meeting 2017},
-  address = {Washington, DC <USA|EEUU>},
-  description = {
-    \f{<Title|Título>} ``(Im)precise nuclear forces: From experiment to model'' }
-}
+% \entry{
+%   date = {<Jan|Enero> 2019},
+%   title = {42nd Symposium on Nuclear Physics},
+%   address = {Cocoyoc, Mexico},
+%   description = {
+%     \f{<Title|Título>} ``Microscopically based energy density functionals for nuclei using the density matrix expansion'' }
+% }
 
-\entry{
-  date = {<Feb|Febrero> 2016},
-  title = {Fairness 2016: Workshop for young scientists with research interests focused on physics at FAIR},
-  address = {Garmisch-Partenkirchen, <Germany|Alemania>},
-  description = {
-    \f{<Title|Título>} ``Statistical uncertainties on the NN interaction and light nuclei'' }
-    }
+% \entry{
+%   date = {<Oct|Octubre> 2018},
+%   title = {Joint Meeting of the APS Division of Nuclear Physics and the Physical Society of Japan},
+%   address = {Waikoloa, HI <USA|EEUU>},
+%   description = {
+%     \f{<Title|Título>} ``HPC implementation of microscopically constrained energy density functionals'' }
+% }
 
-\section{<Professional training|Capacitación profesional>}
-\entry{
-  date = {<March|Marzo> 2017},
-  title = {INT Program},
-  institution = {Institute for Nuclear Theory},
-  address = {Seattle, WA <USA|EEUU>} ,
-  description = {Toward Predictive Theories of Nuclear Reactions Across the Isotopic Chart}
-}
+% \entry{
+%   date = {<Mar|Marzo> 2018},
+%   title = {San Diego State University Colloquium},
+%   address = {San Diego, CA <USA|EEUU>},
+%   description = {
+%     \f{<Title|Título>} ``Precision nuclear physics: Uncertainty Quantification in the supercomputing era'' }
+% }
 
-\entry{
-  date = {<July|Julio> 2016},
-  title = {TALENT: Training in Advanced Low Energy Nuclear Theory},
-  institution = {University of York},
-  address = {<UK|Reino Unido>},
-  description = {Density functional theory and self-consistent methods}
-}
+% \entry{
+%   date = {<Jan|Enero> 2017},
+%   title = {Workshop on The tower of effective (field) theories and the emergence of nuclear phenomena},
+%   address = {Saclay <France|Francia>},
+%   description = {
+%     \f{<Title|Título>} ``Error quantification and falsification of chiral-EFT interactions'' }
+% }
 
-\entry{
-  date = {<June|Junio> 2016},
-  title = {INT Program},
-  institution = {Institute for Nuclear Theory},
-  address = {Seattle, WA <USA|EEUU>} ,
-  description = {Bayesian Methods in Nuclear Physics}
-}
+% \entry{
+%   date = {<Jan|Enero> 2017},
+%   title = {American Physical Society April Meeting 2017},
+%   address = {Washington, DC <USA|EEUU>},
+%   description = {
+%     \f{<Title|Título>} ``(Im)precise nuclear forces: From experiment to model'' }
+% }
+
+% \entry{
+%   date = {<Feb|Febrero> 2016},
+%   title = {Fairness 2016: Workshop for young scientists with research interests focused on physics at FAIR},
+%   address = {Garmisch-Partenkirchen, <Germany|Alemania>},
+%   description = {
+%     \f{<Title|Título>} ``Statistical uncertainties on the NN interaction and light nuclei'' }
+%     }
+
+% \section{<Professional training|Capacitación profesional>}
+% \entry{
+%   date = {<March|Marzo> 2017},
+%   title = {INT Program},
+%   institution = {Institute for Nuclear Theory},
+%   address = {Seattle, WA <USA|EEUU>} ,
+%   description = {Toward Predictive Theories of Nuclear Reactions Across the Isotopic Chart}
+% }
+
+% \entry{
+%   date = {<July|Julio> 2016},
+%   title = {TALENT: Training in Advanced Low Energy Nuclear Theory},
+%   institution = {University of York},
+%   address = {<UK|Reino Unido>},
+%   description = {Density functional theory and self-consistent methods}
+% }
+
+% \entry{
+%   date = {<June|Junio> 2016},
+%   title = {INT Program},
+%   institution = {Institute for Nuclear Theory},
+%   address = {Seattle, WA <USA|EEUU>} ,
+%   description = {Bayesian Methods in Nuclear Physics}
+% }
 
 
 \section{<Professional service|Servicio profesional>}
 
- \subsection{<Journal peer reviewing|Evaluador externo en revistas científicas>}
+ % \subsection{<Journal peer reviewing|Evaluador externo en revistas científicas>}
 
- \committee{
-   date = {<since|desde> 2018},
-   venue = {PRC: Physical Review C},
- }
+ % \committee{
+ %   date = {<since|desde> 2018},
+ %   venue = {PRC: Physical Review C},
+ % }
   
- \committee{
-   date = {2015--2016},
-   venue = {IJMPE: International Journal of Modern Physics E},
- }
+ % \committee{
+ %   date = {2015--2016},
+ %   venue = {IJMPE: International Journal of Modern Physics E},
+ % }
 
- \subsection{<Research grant proposal reviewing|Evaluador externo de projectos de investigación>}
- \committee{
-   date = {2021},
-   venue = {Swiss National Science Foundation}
- }
+ % \subsection{<Research grant proposal reviewing|Evaluador externo de projectos de investigación>}
+ % \committee{
+ %   date = {2021},
+ %   venue = {Swiss National Science Foundation}
+ % }
  
- \committee{
-   date = {2020},
-   venue = {DOE Office of Science Graduate Student Research Program}
- }
+ % \committee{
+ %   date = {2020},
+ %   venue = {DOE Office of Science Graduate Student Research Program}
+ % }
  
-\subsection{<Diversity, equity and inclusion efforts|Esfuerzos para la diversidad, equidad e inclusión>}
- \committee{
-   date = {since 2021},
-   venue = {<Member of the Cal-Bridge Partnership committee|Miembro del comité de Asociación del programa Cal-Bridge> }
- }
+% \subsection{<Diversity, equity and inclusion efforts|Esfuerzos para la diversidad, equidad e inclusión>}
+ % \committee{
+ %   date = {since 2021},
+ %   venue = {<Member of the Cal-Bridge Partnership committee|Miembro del comité de Asociación del programa Cal-Bridge> }
+ % }
 
 
  \committee{
@@ -507,12 +535,18 @@
    venue = {<Academic mentor in the Cal-Bridge program|Mentor académico en el programa Cal-Bridge> }
  }
 
-\subsection{<Member of program committee|Miembro del comité del programa>}
-
 \committee{
-  date = {2012},
-  venue = {<IV Meeting of young researchers of Atomic and Molecular Physics|IV Jornadas de Jóvenes Investigadores en Física Atómica y Molecular>. Universidad de Granada.},
-}
+   date = {Fall 2019},
+   venue = {<Undergraduate Physics brochure redesign|Nuevo folleto para la licenciatura en física> }
+ }
+
+
+% \subsection{<Member of program committee|Miembro del comité del programa>}
+
+% \committee{
+%   date = {2012},
+%   venue = {<IV Meeting of young researchers of Atomic and Molecular Physics|IV Jornadas de Jóvenes Investigadores en Física Atómica y Molecular>. Universidad de Granada.},
+% }
 
 %  \subsection{<Conference peer reviewing|Evaluador externo en conferencias>}
 
@@ -535,105 +569,112 @@
 %    venue = {Proceedings of the 7th International Conference on Parametric Optimization and Related Topics},
 %  }
 
-\section{<Volunteer work|Trabajo voluntario>}
+% \section{<Volunteer work|Trabajo voluntario>}
 
-  \entry{
-    date = {2018},
-    title = {<Judge|Juez>},
-    organisation = {<Distric Science Day|Día de la Ciencia>},
-    address = {Ohio University, <USA|EEUU> }
-  } 
+%   \entry{
+%     date = {2018},
+%     title = {<Judge|Juez>},
+%     organisation = {<Distric Science Day|Día de la Ciencia>},
+%     address = {Ohio University, <USA|EEUU> }
+%   } 
 
-  \entry{
-    date = {2007},
-    title = {<Staff|Colaborador>},
-    organisation = {<XII Regional meeting on Physics Reasearch and Teaching|XII Encuentro regional de Investigación y Enseñanza de la Física>},
-    address = {UDLAP, <Mexico|México> }
-  } 
+%   \entry{
+%     date = {2018},
+%     title = {<Facilitator|Facilitador>},
+%     organisation = {<Science Olympiad|Olimpiada de la Ciencia>},
+%     address = {Ohio University, <USA|EEUU> }    
+%   }
+
+  % \entry{
+  %   date = {2007},
+  %   title = {<Staff|Colaborador>},
+  %   organisation = {<XII Regional meeting on Physics Reasearch and Teaching|XII Encuentro regional de Investigación y Enseñanza de la Física>},
+  %   address = {UDLAP, <Mexico|México> }
+  % } 
   
-  \entry{
-    date = {2006},
-    title = {<Organiser|Organizador>},
-    organisation = {<X Conference Cycle in Physics and Mathematics|X Ciclo de Conferencias de Física y Matemáticas>},
-    address = {UDLAP, <Mexico|México> }
-  }
+  % \entry{
+  %   date = {2006},
+  %   title = {<Organiser|Organizador>},
+  %   organisation = {<X Conference Cycle in Physics and Mathematics|X Ciclo de Conferencias de Física y Matemáticas>},
+  %   address = {UDLAP, <Mexico|México> }
+  % }
   
-  \entry{
-    date = {2005--2006},
-    title = {<Treasurer|Tesorero>},
-    organisation = {<Student Council, Physics and Mathematics board|Consejo Estudiantil, mesa de Física y Matemáticas>}, 
-    address = {UDLAP, <Mexico|México> }
-  }
+  % \entry{
+  %   date = {2005--2006},
+  %   title = {<Treasurer|Tesorero>},
+  %   organisation = {<Student Council, Physics and Mathematics board|Consejo Estudiantil, mesa de Física y Matemáticas>}, 
+  %   address = {UDLAP, <Mexico|México> }
+  % }
 
-\section{<Skills and competences|Habilidades personales>}
+% \section{<Skills and competences|Habilidades personales>}
 
-\subsection{<Languages|Idiomas>}
+% \subsection{<Languages|Idiomas>}
 
-\skill{
-  subject = {<English|Inglés>},
-  details = {<Fluent (Written and spoken)|Fluido (Hablado y escrito)>},
-}
+% \skill{
+%   subject = {<English|Inglés>},
+%   details = {<Fluent (Written and spoken)|Fluido (Hablado y escrito)>},
+% }
 
-\skill{
-  subject = {<Spanish|Español>},
-  details = {<Native|Nativo>},
-}
+% \skill{
+%   subject = {<Spanish|Español>},
+%   details = {<Native|Nativo>},
+% }
 
-\skill{
-  subject = {<German|Alemán>},
-  details = {<Basic (Spoken)|Básico (Hablado)>},
-}
+% \skill{
+%   subject = {<German|Alemán>},
+%   details = {<Basic (Spoken)|Básico (Hablado)>},
+% }
 
-\subsection{<Programming languages|Lenguajes de programación>}
+% \subsection{<Programming languages|Lenguajes de programación>}
 
-\programming{
-  subject = {<Imperative|Imperativos>},
-  details = {Fortran},
-}
+% \programming{
+%   subject = {<Imperative|Imperativos>},
+%   details = {Fortran},
+% }
 
-\programming{
- subject = {<Object oriented|Orientado a objetos>},
- details = {Python},
-}
+% \programming{
+%  subject = {<Object oriented|Orientado a objetos>},
+%  details = {Python},
+% }
 
-\programming{
-  subject = {<Parallel computing|Computación en paralelo>},
-  details = {OpenMP, MPI},
-}
+% \programming{
+%   subject = {<Parallel computing|Computación en paralelo>},
+%   details = {OpenMP, MPI},
+% }
 
-%\programming{
-%  subject = {<Logic and functional|Lógicos y funcionales>},
-%  details = {Prolog, OCaml, Haskell},
-%}
+% %\programming{
+% %  subject = {<Logic and functional|Lógicos y funcionales>},
+% %  details = {Prolog, OCaml, Haskell},
+% %}
 
-\programming{
-  subject = {<Symbolic and numerical|Análisis simbólico y numérico>},
-  details = {Mathematica, Matlab},
-}
+% \programming{
+%   subject = {<Symbolic and numerical|Análisis simbólico y numérico>},
+%   details = {Mathematica, Matlab},
+% }
 
-\programming{
-  subject = {<Document typesetting|Composición de documentos>},
-  details = {\LaTeXTeX},
-}
+% \programming{
+%   subject = {<Document typesetting|Composición de documentos>},
+%   details = {\LaTeXTeX},
+% }
 
-\programming{
-  subject = {<Web design|Diseño web>},
-  details = {HTML, CSS},
-}
+% \programming{
+%   subject = {<Web design|Diseño web>},
+%   details = {HTML, CSS},
+% }
 
-%\programming{
-%  subject = {<Databases|Bases de datos>},
-%  details = {SQLite, MySQL},
-%}
+% %\programming{
+% %  subject = {<Databases|Bases de datos>},
+% %  details = {SQLite, MySQL},
+% %}
 
-%\programming{
-%  subject = {<Social media|Medios sociales>},
-%  details = {<Twitter and Facebook apps|Apps en Twitter y Facebook>},
-%}
+% %\programming{
+% %  subject = {<Social media|Medios sociales>},
+% %  details = {<Twitter and Facebook apps|Apps en Twitter y Facebook>},
+% %}
 
-\subsection{<General interests|Intereses generales>}
+% \subsection{<General interests|Intereses generales>}
 
-\cvitem{}{<Physics, mathematics, science, high performance computing, critical thinking and technology.|Física, matemáticas, ciencia, pensamiento crítico y tecnología.>}
+% \cvitem{}{<Physics, mathematics, science, high performance computing, critical thinking and technology.|Física, matemáticas, ciencia, pensamiento crítico y tecnología.>}
 
 
 \section{<References|Referencias>}
@@ -648,21 +689,21 @@
 }
 
 \reference{
-  name = {Charlotte Elster},
-  institution = {<Physics and Astronomy Department|
-                  Departamento de Física y Astronomía>. Ohio University},
-  address = {Clippinger 265, Athens OH-45701, <USA|EEUU>},
-  phone = {+1~(740)~593~1697},
-  email = {elster@ohio.edu},
+  name = {Alexander Rudolph},
+  institution = {<Department of Physics and Astronomy|
+                  Departamento de Física y Astronomía>. California State Polytechnic University},
+  address = {3801 West Temple Blvd, Pomona CA-91768, <USA|EEUU>},
+  phone = {+1~(909)~717~1851},
+  email = {alrudolph@cpp.edu},
 }
 
 \reference{
-  name = {Nicolas Schunck},
-  institution = {<Nuclear Data and Theory Group|
-                  Grupo de Datos y Teoría Nuclear>. Lawrence Livermore National Laboratory},
-  address = {L-414, P.O. Box 808, Livemore CA-94551, <USA|EEUU>},
-  phone = {+1~(925)~422~1621},
-  email = {schunck1@llnl.gov},
+  name = {David Ingram},
+  institution = {<Department of Physics and Astronomy|
+                  Departamento de Física y Astronomía>. Ohio University},
+  address = {Clippinger 267, Athens OH-45701, <USA|EEUU>},
+  phone = {+1~(740)~593~0336},
+  email = {ingram@ohio.edu},
 }
 
 
